--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="towers_of_doom">Towers of Doom</string>
     <string name="volskaya_foundry">Volskaya Foundry</string>
     <string name="warhead_junction">Warhead Junction</string>
+    <string name="your_team">Your team</string>
+    <string name="enemy_team">Enemy team</string>
 </resources>
