Filtering and sorting heroes.

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -19,4 +19,92 @@
     <string name="enemy_team">Enemy team</string>
     <string name="roles">Roles:</string>
     <string name="universes">Universes:</string>
+    <string name="abathur">Abathur</string>
+    <string name="alarak">Alarak</string>
+    <string name="alexstrasza">Alexstrasza</string>
+    <string name="ana">Ana</string>
+    <string name="anduin">Anduin</string>
+    <string name="anubarak">Anub\'arak</string>
+    <string name="artanis">Artanis</string>
+    <string name="arthas">Arthas</string>
+    <string name="auriel">Auriel</string>
+    <string name="azmodan">Azmodan</string>
+    <string name="blaze">Blaze</string>
+    <string name="brightwing">Brightwing</string>
+    <string name="cassia">Cassia</string>
+    <string name="chen">Chen</string>
+    <string name="cho">Cho</string>
+    <string name="chromie">Chromie</string>
+    <string name="deathwing">Deathwing</string>
+    <string name="deckard">Deckard</string>
+    <string name="dehaka">Dehaka</string>
+    <string name="diablo">Diablo</string>
+    <string name="di_va">D.va</string>
+    <string name="etc">E.T.C.</string>
+    <string name="falstad">Falstad</string>
+    <string name="fenix">Fenix</string>
+    <string name="gall">Gall</string>
+    <string name="garrosh">Garrosh</string>
+    <string name="gazlowe">Gazlowe</string>
+    <string name="genji">Genji</string>
+    <string name="greymane">Greymane</string>
+    <string name="guldan">Gul\'dan</string>
+    <string name="hanzo">Hanzo</string>
+    <string name="illidan">Illidan</string>
+    <string name="imperius">Imperius</string>
+    <string name="jaina">Jaina</string>
+    <string name="johanna">Johanna</string>
+    <string name="junkrat">Junkrat</string>
+    <string name="kaelthas">Kael\'thas</string>
+    <string name="kel_thuzad">Kel\'Thuzad</string>
+    <string name="kerrigan">Kerrigan</string>
+    <string name="kharazim">Kharazim</string>
+    <string name="leoric">Leoric</string>
+    <string name="li_li">Li Li</string>
+    <string name="li_ming">Li-Ming</string>
+    <string name="lt_morales">Lt. Morales</string>
+    <string name="lucio">Lucio</string>
+    <string name="lunara">Lunara</string>
+    <string name="maiev">Maiev</string>
+    <string name="malfurion">Malfurion</string>
+    <string name="mal_ganis">Mal\'Ganis</string>
+    <string name="malthael">Malthael</string>
+    <string name="medivh">Medivh</string>
+    <string name="mephisto">Mephisto</string>
+    <string name="muradin">Muradin</string>
+    <string name="murky">Murky</string>
+    <string name="nazeebo">Nazeebo</string>
+    <string name="nova">Nova</string>
+    <string name="orphea">Orphea</string>
+    <string name="probius">Probius</string>
+    <string name="qhira">Qhira</string>
+    <string name="ragnaros">Ragnaros</string>
+    <string name="raynor">Raynor</string>
+    <string name="rehgar">Rehgar</string>
+    <string name="rexxar">Rexxar</string>
+    <string name="samuro">Samuro</string>
+    <string name="sgt_hammer">Sgt. Hammer</string>
+    <string name="sonya">Sonya</string>
+    <string name="stitches">Stitches</string>
+    <string name="stukov">Stukov</string>
+    <string name="sylvanas">Sylvanas</string>
+    <string name="tassadar">Tassadar</string>
+    <string name="the_butcher">The Butcher</string>
+    <string name="the_lost_vikings">The Lost Vikings</string>
+    <string name="thrall">Thrall</string>
+    <string name="tracer">Tracer</string>
+    <string name="tychus">Tychus</string>
+    <string name="tyrael">Tyrael</string>
+    <string name="tyrande">Tyrande</string>
+    <string name="uther">Uther</string>
+    <string name="valeera">Valeera</string>
+    <string name="valla">Valla</string>
+    <string name="varian">Varian</string>
+    <string name="whitemane">Whitemane</string>
+    <string name="xul">Xul</string>
+    <string name="yrel">Yrel</string>
+    <string name="zagara">Zagara</string>
+    <string name="zarya">Zarya</string>
+    <string name="zeratul">Zeratul</string>
+    <string name="zuljin">Zul\'jin</string>
 </resources>
